# rust.naive

./: Cargo.toml  README.md
src/: main.rs  naive.rs
src/engine/: render.rs
src/naive/: gfx.rs  render.rs  text.rs
src/naive/gfx/: matrix.rs  mesh.rs  point.rs  triangle.rs  vector.rs
