[package]
name = "gfx_3d"
version = "0.1.0"
authors = ["Ivan Yakushev <iyakushev@quantumbrains.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.33"
default-features = false
features = ["ttf","image"]